--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="tedpermission_setting">Setting</string>
     <string name="title_activity_settings">Settings</string>
     <string name="more_apps">More Apps</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
