--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -31,4 +31,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nativeAdMessage">nativeAdMessage</string>
 </resources>
